# platform.core.connectivity.nfc-manager-neard

./: .gitignore  AUTHORS  CMakeLists.txt  NOTICE  nfc-manager.manifest
TC/: _export_env.sh
client/: CMakeLists.txt  net_nfc_client.c  net_nfc_client.h  net_nfc_client_context.c  net_nfc_client_data.c  net_nfc_client_exchanger.c  net_nfc_client_handover.c  net_nfc_client_llcp.c  net_nfc_client_manager.c  net_nfc_client_ndef.c  net_nfc_client_ndef_message.c  net_nfc_client_ndef_message_handover.c  net_nfc_client_ndef_record.c  net_nfc_client_p2p.c  net_nfc_client_phdc.c  net_nfc_client_se.c  net_nfc_client_sign_record.c  net_nfc_client_snep.c  net_nfc_client_system_handler.c  net_nfc_client_tag.c  net_nfc_client_tag_felica.c  net_nfc_client_tag_internal.h  net_nfc_client_tag_jewel.c  net_nfc_client_tag_mifare.c  net_nfc_client_target_info.c  net_nfc_client_test.c  net_nfc_client_transceive.c  net_nfc_client_util.c  net_nfc_neard.c  nfc.pc.in
client/include/: net_nfc.h  net_nfc_client_context.h  net_nfc_client_exchanger.h  net_nfc_client_handover.h  net_nfc_client_llcp.h  net_nfc_client_manager.h  net_nfc_client_ndef.h  net_nfc_client_p2p.h  net_nfc_client_phdc.h  net_nfc_client_se.h  net_nfc_client_snep.h  net_nfc_client_system_handler.h  net_nfc_client_tag.h  net_nfc_client_tag_felica.h  net_nfc_client_tag_jewel.h  net_nfc_client_tag_mifare.h  net_nfc_client_test.h  net_nfc_client_transceive.h  net_nfc_client_util.h  net_nfc_data.h  net_nfc_ndef_message.h  net_nfc_ndef_message_handover.h  net_nfc_ndef_record.h  net_nfc_neard.h  net_nfc_sign_record.h  net_nfc_target_info.h
common/: CMakeLists.txt  net_nfc.xml  net_nfc_debug_internal.h  net_nfc_util.c  net_nfc_util_defines.h  net_nfc_util_gdbus.c  net_nfc_util_gdbus_internal.h  net_nfc_util_handover.c  net_nfc_util_internal.h  net_nfc_util_ipc.c  net_nfc_util_ndef_message.c  net_nfc_util_ndef_record.c  net_nfc_util_openssl.c  net_nfc_util_openssl_internal.h  net_nfc_util_sign_record.c  nfc-common.pc.in
common/include/: net_nfc_oem_controller.h  net_nfc_typedef.h  net_nfc_typedef_internal.h  net_nfc_util_handover.h  net_nfc_util_ndef_message.h  net_nfc_util_ndef_record.h  net_nfc_util_sign_record.h
daemon/: CMakeLists.txt  net_nfc_server.c  net_nfc_server.h  net_nfc_server_common.c  net_nfc_server_common.h  net_nfc_server_context.c  net_nfc_server_context.h  net_nfc_server_controller.c  net_nfc_server_controller.h  net_nfc_server_handover.c  net_nfc_server_handover.h  net_nfc_server_handover_bss.c  net_nfc_server_handover_bss.h  net_nfc_server_handover_bt.c  net_nfc_server_handover_bt.h  net_nfc_server_llcp.c  net_nfc_server_llcp.h  net_nfc_server_manager.c  net_nfc_server_manager.h  net_nfc_server_ndef.c  net_nfc_server_ndef.h  net_nfc_server_p2p.c  net_nfc_server_p2p.h  net_nfc_server_phdc.c  net_nfc_server_phdc.h  net_nfc_server_process_handover.c  net_nfc_server_process_handover.h  net_nfc_server_process_npp.c  net_nfc_server_process_npp.h  net_nfc_server_process_phdc.c  net_nfc_server_process_phdc.h  net_nfc_server_process_snep.c  net_nfc_server_process_snep.h  net_nfc_server_se.c  net_nfc_server_se.h  net_nfc_server_snep.c  net_nfc_server_snep.h  net_nfc_server_system_handler.c  net_nfc_server_system_handler.h  net_nfc_server_tag.c  (+9 more)
src/clientlib/: CMakeLists.txt  net_nfc_app_util.c  net_nfc_client.c  net_nfc_client_context.c  net_nfc_client_data.c  net_nfc_client_dispatcher.c  net_nfc_client_exchanger.c  net_nfc_client_handover.c  net_nfc_client_internal_se.c  net_nfc_client_ipc.c  net_nfc_client_llcp.c  net_nfc_client_manager.c  net_nfc_client_ndef.c  net_nfc_client_ndef_message.c  net_nfc_client_ndef_message_handover.c  net_nfc_client_ndef_record.c  net_nfc_client_nfc.c  net_nfc_client_p2p.c  net_nfc_client_se.c  net_nfc_client_sign_record.c  net_nfc_client_snep.c  net_nfc_client_system_handler.c  net_nfc_client_tag.c  net_nfc_client_tag_felica.c  net_nfc_client_tag_jewel.c  net_nfc_client_tag_mifare.c  net_nfc_client_target_info.c  net_nfc_client_test.c  net_nfc_client_transceive.c  net_nfc_client_util.c  net_nfc_neard.c  nfc.pc.in
src/commonlib/: CMakeLists.txt  net_nfc_util.c  net_nfc_util_gdbus.c  net_nfc_util_handover.c  net_nfc_util_ipc.c  net_nfc_util_ndef_message.c  net_nfc_util_ndef_record.c  net_nfc_util_openssl.c  net_nfc_util_sign_record.c  nfc-common-lib.pc.in
src/manager/: CMakeLists.txt  net_nfc_app_util.c  net_nfc_controller.c  net_nfc_manager.c  net_nfc_manager_util.c  net_nfc_server.c  net_nfc_server_common.c  net_nfc_server_context.c  net_nfc_server_dispatcher.c  net_nfc_server_handover.c  net_nfc_server_handover_bss.c  net_nfc_server_handover_bt.c  net_nfc_server_ipc.c  net_nfc_server_llcp.c  net_nfc_server_manager.c  net_nfc_server_ndef.c  net_nfc_server_p2p.c  net_nfc_server_process_handover.c  net_nfc_server_process_npp.c  net_nfc_server_process_snep.c  net_nfc_server_se.c  net_nfc_server_snep.c  net_nfc_server_system_handler.c  net_nfc_server_tag.c  net_nfc_server_test.c  net_nfc_server_transceive.c  net_nfc_server_vconf.c  net_nfc_service.c  net_nfc_service_llcp.c  net_nfc_service_llcp_handover.c  net_nfc_service_se.c  net_nfc_service_tag.c  net_nfc_service_test.c  net_nfc_service_vconf.c  net_nfc_util_access_control.c  nfc-manager.service  nfc-manager.xml  nfc-service.xml  org.tizen.NetNfcService.service  (+1 more)
tests/: CMakeLists.txt  main.c  net_nfc_test_client.c  net_nfc_test_client.h  net_nfc_test_exchanger.c  net_nfc_test_exchanger.h  net_nfc_test_handover.c  net_nfc_test_handover.h  net_nfc_test_jewel.c  net_nfc_test_jewel.h  net_nfc_test_llcp.c  net_nfc_test_llcp.h  net_nfc_test_manager.c  net_nfc_test_manager.h  net_nfc_test_ndef.c  net_nfc_test_ndef.h  net_nfc_test_p2p.c  net_nfc_test_p2p.h  net_nfc_test_se.c  net_nfc_test_se.h  net_nfc_test_snep.c  net_nfc_test_snep.h  net_nfc_test_sys_handler.c  net_nfc_test_sys_handler.h  net_nfc_test_tag.c  net_nfc_test_tag.h  net_nfc_test_tag_felica.c  net_nfc_test_tag_felica.h  net_nfc_test_tag_mifare.c  net_nfc_test_tag_mifare.h  net_nfc_test_test.c  net_nfc_test_transceive.c  net_nfc_test_transceive.h  net_nfc_test_util.c  net_nfc_test_util.h
(+150 files in other folders)
