CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(nfc-manager C)

INCLUDE(FindPkgConfig)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wall -Werror-implicit-function-declaration")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fPIC -fvisibility=hidden")
#SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fno-strict-aliasing")

#SET(ARM_CFLAGS "-mabi=aapcs-linux -fno-common")

IF(ARM_TARGET)
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ARM_CFLAGS}")
ENDIF(ARM_TARGET)

SET(CMAKE_SHARED_LINKER_FLAGS " -Wl,--as-needed -Wl,--rpath=${LIB_INSTALL_DIR}")
SET(CMAKE_EXE_LINKER_FLAGS " -Wl,--as-needed -Wl,--hash-style=both")

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

ADD_DEFINITIONS("-DNFC_MANAGER_MODULEDIR=\"${LIB_INSTALL_DIR}/nfc\"")

ADD_DEFINITIONS("-DUSE_FULL_URI")
#ADD_DEFINITIONS("-DESE_ALWAYS_ON")

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(daemon)
ADD_SUBDIRECTORY(tests)
#ADD_SUBDIRECTORY(tools/ndef-tool)
#ADD_SUBDIRECTORY(tools/nfc-client)
