LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/manager/include)

SET(NFC_CLIENT "nfc")

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} CLIENT_SRCS)

pkg_check_modules(client_pkgs REQUIRED security-server dlog ecore-x vconf libtzplatform-config)

FOREACH(flag ${client_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_LIBRARY(${NFC_CLIENT} SHARED ${CLIENT_SRCS})
TARGET_LINK_LIBRARIES(${NFC_CLIENT} ${client_pkgs_LDFLAGS} nfc-common)
SET_TARGET_PROPERTIES(${NFC_CLIENT} PROPERTIES VERSION ${FULLVER} SOVERSION ${MAJORVER})

FILE(GLOB CLIENT_HEADER include/*.h)
SET(CLIENT_HEADER ${CLIENT_HEADER} ${CMAKE_SOURCE_DIR}/common/include/net_nfc_typedef.h)

CONFIGURE_FILE(${NFC_CLIENT}.pc.in ${NFC_CLIENT}.pc @ONLY)
INSTALL(FILES ${NFC_CLIENT}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

INSTALL(TARGETS ${NFC_CLIENT} DESTINATION ${LIB_INSTALL_DIR})

FOREACH(hfile ${CLIENT_HEADER})
	INSTALL(FILES ${hfile} DESTINATION include/${NFC_CLIENT})
ENDFOREACH(hfile)
