LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/manager/include)

SET(NFC_CLIENT "nfc")

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} CLIENT_SRCS)

IF(X11_SUPPORT)
       SET(WIN_PKG "ecore-x")
ENDIF(X11_SUPPORT)
IF(WAYLAND_SUPPORT)
       SET(WIN_PKG "${WIN_PKG} ecore-wayland")
ENDIF(WAYLAND_SUPPORT)
INCLUDE(FindPkgConfig)
pkg_check_modules(client_pkgs REQUIRED dlog vconf libtzplatform-config neardal
			libssl appsvc svi capi-media-wav-player ${WIN_PKG})

IF(WAYLAND_SUPPORT)
	ADD_DEFINITIONS("-DHAVE_WAYLAND")
ENDIF(WAYLAND_SUPPORT)

IF(X11_SUPPORT)
	ADD_DEFINITIONS("-DHAVE_X11")
ENDIF(X11_SUPPORT)

FOREACH(flag ${client_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_LIBRARY(${NFC_CLIENT} SHARED ${CLIENT_SRCS})
TARGET_LINK_LIBRARIES(${NFC_CLIENT} ${client_pkgs_LDFLAGS} nfc-common)
SET_TARGET_PROPERTIES(${NFC_CLIENT} PROPERTIES VERSION ${FULLVER} SOVERSION ${MAJORVER})

FILE(GLOB CLIENT_HEADER include/*.h)
SET(CLIENT_HEADER ${CLIENT_HEADER} ${CMAKE_SOURCE_DIR}/common/include/net_nfc_typedef.h)

CONFIGURE_FILE(${NFC_CLIENT}.pc.in ${NFC_CLIENT}.pc @ONLY)
INSTALL(FILES ${NFC_CLIENT}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

INSTALL(TARGETS ${NFC_CLIENT} DESTINATION ${LIB_INSTALL_DIR})

FOREACH(hfile ${CLIENT_HEADER})
	INSTALL(FILES ${hfile} DESTINATION include/${NFC_CLIENT})
ENDFOREACH(hfile)
